syntax = "proto2";

package zmq_message;

message ProtoMessage {
  required bytes client_id = 1;
  required bytes req_id = 2;
  required bytes part_id = 3;
  required bytes num_part = 4;
  required bytes msg_type = 5;
  required bytes msg_content = 6;
  required bytes route = 7;
}